--- a/base_stats.ipynb
+++ b/base_stats.ipynb
@@ -7,14 +7,106 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import core libraries for data handling and visualization\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
+    "\n",
+    "# System and warning configuration\n",
     "import os\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')  # Suppress all warnings\n",
-    "os.environ[\"KMP_DUPLICATE_LIB_OK\"] = \"TRUE\""
+    "warnings.filterwarnings('ignore')  # Hide warnings for cleaner output\n",
+    "os.environ[\"KMP_DUPLICATE_LIB_OK\"] = \"TRUE\" # Prevent MKL duplication error (especially on Mac)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63fc77c4-458f-494d-bb2a-4324c5016ec8",
+   "metadata": {},
+   "source": [
+    "### Helper Function: Violin Plot by Gender and Generation\n",
+    "\n",
+    "This helper function creates a violin plot showing the distribution of a given feature (col) for males and females within a specific generation.\n",
+    "Violin plots combine boxplots with kernel density plots, helping visualize both summary statistics and distribution shape."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e9f9d45f-7165-488b-8b82-35e81724f043",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Helper functions\n",
+    "\n",
+    "def plot_violin_gen(data, col, gen = 1):\n",
+    "    \"\"\"Shows the distribution of the specified column and generation by gender\n",
+    "\n",
+    "    Args:\n",
+    "        data (pd.DataFrame): Data to plot from\n",
+    "        col (str): Column to plot distribution\n",
+    "        gen (int, optional): Generation to filter by. Defaults to 1.\n",
+    "    \"\"\"\n",
+    "    if data[col].dtype == 'object':\n",
+    "        raise ValueError(f\"Column '{col}' must be numeric to plot grouped means.\")\n",
+    "\n",
+    "    df_cpy = data.loc[data['Generation'] == gen, [col, 'Gender']].copy()\n",
+    "    sns.violinplot(df_cpy, y=col, hue='Gender')\n",
+    "    plt.title(f'Distribution of {col} for Generation {gen}', fontsize=16)\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "def plot_grouped(data, col, divide_by_group = True):\n",
+    "    \"\"\"Plots grouped mean valuesa as bar plots through generations\n",
+    "\n",
+    "    Args:\n",
+    "        data (pd.DataFrame): Data to plot from\n",
+    "        col (str): Column to plot grouped bar plots for\n",
+    "        divide_by_group (bool): Defaults to True. Determines to plot by gender or by Group.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if data[col].dtype == 'object':\n",
+    "        raise ValueError(f\"Column '{col}' must be numeric to plot grouped means.\")\n",
+    "\n",
+    "    divider = 'Group' if divide_by_group else 'Gender'\n",
+    "    df_cpy = data[['Generation', divider, col]].copy()\n",
+    "    df_cpy = df_cpy.groupby(['Generation', divider])[col].mean().reset_index()\n",
+    "    sns.barplot(df_cpy, x='Generation', y=col, hue=divider)\n",
+    "    plt.title(f'Average {col} by Generation and {divider}', fontsize=16)\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0036998-aa81-4753-85f5-b5b7d2d7ba2f",
+   "metadata": {},
+   "source": [
+    "### Parameter Configuration\n",
+    "\n",
+    "This dictionary defines global parameters for filtering, feature selection, and reproducibility. These parameters are reused across cells to ensure consistent logic for:\n",
+    "- Selecting modeling features\n",
+    "- Splitting data by generation\n",
+    "- Excluding metadata or string-based columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8f0b6b03-65a6-40d8-ba68-c49ccf10b4ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define global parameters for filtering, exclusion, and reproducibility\n",
+    "params = { \n",
+    "    'for_ml' : 'processed/ambitus_0_15_ml_ready_24_07_2025.csv', # Path to preprocessed ML-ready data\n",
+    "    'str_cols' : ['Group', 'Gender', 'Season'], # Categorical string columns\n",
+    "    'not_for_ml' : ['Group', 'Gender', 'Season', 'NR', 'Year', 'Paradigm', 'id', 'Generation'], # Columns excluded from modeling\n",
+    "    'not_corr_cols' : ['Group', 'Gender', 'Season', 'NR', 'Year', 'Paradigm', 'id', 'Generation', 'Group'], # Excluded from correlation\n",
+    "    'generation_cut' : 13, # Upper limit for training/test split\n",
+    "    'generation_under_cut' : 6, # Lower limit for training data\n",
+    "    'seed' : 42 # Seed for reproducibility\n",
+    "}"
    ]
   },
   {
@@ -22,7 +114,9 @@
    "id": "a7f0c060-e56a-4787-8dab-65cb022d3cb9",
    "metadata": {},
    "source": [
-    "### Load the data"
+    "### Load and Prepare the Data\n",
+    "\n",
+    "We load the behavioral dataset from a .parquet file into a DataFrame and standardize the gender columns to lowercase ('GR_Gender', 'Gender') to ensure consistency. This step avoids downstream grouping or filtering issues due to inconsistent casing (e.g., \"Male\" vs. \"male\")."
    ]
   },
   {
@@ -45,7 +139,14 @@
    "id": "737ebc86-f7b6-4a12-9381-a795bcfbd3e7",
    "metadata": {},
    "source": [
-    "### Correlation plot"
+    "### Spearman Correlation Matrix\n",
+    "\n",
+    "To explore associations between behavioral features, we compute a Spearman correlation matrix after:\n",
+    "- Removing categorical and metadata columns (e.g., IDs, trial info)\n",
+    "- Keeping only numeric columns with sufficient variance\n",
+    "- Calculating non-parametric (rank-based) correlations\n",
+    "\n",
+    "This plot reveals monotonic relationships between features and helps identify clusters, redundancies, or candidate variables for dimensionality reduction or modeling."
    ]
   },
   {
@@ -65,14 +166,43 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "# Drop categorical / identifier columns that are not behavioral features\n",
+    "exclude_keywords = ['id', 'group', 'sex', 'trial', 'year', 'gen', 'rat', 'animal']\n",
+    "exclude_columns = [col for col in df.columns if any(key in col.lower() for key in exclude_keywords)]\n",
+    "df_filtered = df.drop(columns=exclude_columns, errors='ignore')\n",
+    "\n",
+    "# Keep only numeric columns\n",
+    "df_numeric = df_filtered.select_dtypes(include='number')\n",
+    "\n",
+    "# Drop columns with constant values or near-zero variance\n",
+    "df_numeric = df_numeric.loc[:, df_numeric.std() > 0.01]\n",
+    "\n",
+    "# Select top 30 variables by standard deviation\n",
+    "top30_columns = df_numeric.std().sort_values(ascending=False).head(30).index\n",
+    "df_top30 = df_numeric[top30_columns]\n",
+    "\n",
+    "# Plot the correlation result\n",
+    "\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.heatmap(df_top30.corr(), cmap=\"coolwarm\", center=0, annot=False, fmt=\".2f\", linewidths=1)\n",
+    "plt.title(\"Correlation Matrix – Top 30 Behavioral Features\", fontsize=16)\n",
+    "# show figure\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "5641e369-ebd8-42e8-8e50-6ea922e2f30b",
    "metadata": {},
    "source": [
-    "### Data distribution plot"
+    "### Data Cleaning and Grouping\n",
+    "\n",
+    "Before visualizing group-level distributions, we:\n",
+    "- Drop rows missing key metadata (GR_Gender, Year)\n",
+    "- Standardize and prepare the Group_Sex column for plotting (e.g., combining gender and group labels)\n",
+    "\n",
+    "This step ensures consistent grouping across all visualizations."
    ]
   },
   {
@@ -87,6 +217,18 @@
     "\n",
     "# Standardize Group_Sex values to lowercase\n",
     "df_clean['Group_Sex'] = df_clean['GR_Gender'].str.lower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fe802f5-484f-4422-a640-ee9ae8296a5f",
+   "metadata": {},
+   "source": [
+    "### Feature Selection for Visualization\n",
+    "\n",
+    "We define a dictionary of key behavioral metrics and their human-readable labels. These will be used in plots to ensure clarity and interpretability when presenting group-wise differences.\n",
+    "\n",
+    "You can add or remove features depending on your focus (e.g., cognitive traits, motor activity, exploration patterns)."
    ]
   },
   {
@@ -161,7 +303,9 @@
    "id": "a6eb9aed-309d-45c5-a711-2857cbf1b461",
    "metadata": {},
    "source": [
-    "### Statistics by generations"
+    "### Summary Statistics Across Generations\n",
+    "\n",
+    "In the next section, we will compare selected behavioral metrics across different generations to explore potential longitudinal trends or cohort effects."
    ]
   },
   {
@@ -593,6 +737,112 @@
    ],
    "source": [
     "summary_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5be7c1b6-4bee-43c9-bf25-4448e58e30e0",
+   "metadata": {},
+   "source": [
+    "### Gender-wise Trend of Behavioral Feature Across Generations\n",
+    "\n",
+    "This plot shows how the average value of the selected behavioral metric\n",
+    "Expl_E_I_TOT_Loco_ratio_4 (likely related to exploratory locomotion) evolves across generations, separated by gender.\n",
+    "\n",
+    "You can replace the feature name in the function call to explore trends for other variables as well."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94549f04-bc9b-4da7-b856-3cc050dda96e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Plotting the mean value through the generations and by gendersŰ\n",
+    "plot_grouped(data, 'Expl_E_I_TOT_Loco_ratio_4')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "242a56bc-e008-4528-8a02-63a3c6cf8f82",
+   "metadata": {},
+   "source": [
+    "### Violin Plot: Gender Differences in a Single Generation\n",
+    "\n",
+    "This visualization shows the distribution of the feature EAT_E_% in Generation 4, separated by gender.\n",
+    "\n",
+    "Violin plots display both the distribution shape (via KDE) and summary statistics (median, quartiles), making it easy to spot differences in variability and central tendency.\n",
+    "\n",
+    "You can try:\n",
+    "- Changing the feature (e.g., 'L_C', 'Expl_TOT')\n",
+    "- Visualizing a different generation (e.g., gen=7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f20c00a-da8c-4020-acf2-d8d69de96535",
+   "metadata": {},
+   "source": [
+    "### Group Distribution Across Generations\n",
+    "\n",
+    "To understand the target variable (Group) over time, we plot its distribution by generation.\n",
+    "This helps evaluate:\n",
+    "- Whether some groups dominate in specific generations\n",
+    "- Potential bias in modeling based on generational imbalance\n",
+    "\n",
+    "You can use this insight to inform your training/test split or apply resampling methods."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff8dce43-3eef-4ffc-9970-42e34978e301",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_violin_gen(data, 'EAT_E_%', 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa56eaea-ac1d-47a6-982e-d284ac189fc8",
+   "metadata": {},
+   "source": [
+    "### Group Distribution – Overall and by Generation\n",
+    "\n",
+    "We visualize the class distribution (Group) in two ways:\n",
+    "- By generation: reveals how group membership varies over time.\n",
+    "This helps detect potential sampling bias or temporal drift.\n",
+    "- Overall distribution: helps assess class balance, which is critical before training a classifier.\n",
+    "\n",
+    "If one group dominates:\n",
+    "- Consider class weighting, resampling, or stratified splitting for fair model training.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa3a6c6d-a2bb-44e3-8d13-f0ae6bed11c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensure 'Generation' is treated as numeric\n",
+    "data['Generation'] = pd.to_numeric(data['Generation'])\n",
+    "# Plot the distribution of Group labels across generations\n",
+    "ax = sns.histplot(data, x='Generation', multiple='dodge', hue='Group', shrink= 0.7, discrete = True, binwidth=0.5)\n",
+    "# ax.bar_label(ax.containers[0], label_type='edge', fontsize=8)\n",
+    "# ax.bar_label(ax.containers[1], label_type='edge', fontsize=8)\n",
+    "ax.set_xticks(range(0, 16))\n",
+    "plt.title('Distribution of Group by Generation', fontsize=16)\n",
+    "plt.show()\n",
+    "\n",
+    "#Group label distribution over all generations\n",
+    "ax = sns.histplot(data, x='Group', hue='Group')\n",
+    "ax.bar_label(ax.containers[0], label_type='edge', fontsize=8)\n",
+    "ax.bar_label(ax.containers[1], label_type='edge', fontsize=8)\n",
+    "plt.title('Distribution of Group', fontsize=16)\n",
+    "plt.show()"
    ]
   }
  ],
