--- a/anova_playground.ipynb
+++ b/anova_playground.ipynb
@@ -2,16 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "577ae486-1fed-49e3-a908-4bf4074bec6b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import essential libraries for data handling, visualization, and analysis\n",
     "import pandas as pd\n",
-    "import os\n",
-    "import warnings\n",
+    "\n",
+    "# Import statistical tools\n",
     "from statsmodels.formula.api import ols\n",
     "import statsmodels.api as sm\n",
+    "\n",
+    "# System and warning configuration\n",
+    "import warnings\n",
+    "import os\n",
     "warnings.filterwarnings('ignore')  # Suppress all warnings\n",
     "os.environ[\"KMP_DUPLICATE_LIB_OK\"] = \"TRUE\""
    ]
@@ -21,12 +26,14 @@
    "id": "866f553f-09d1-4c28-8027-706bcd7d2bf3",
    "metadata": {},
    "source": [
-    "### Load the data"
+    "### Load and Prepare Dataset\n",
+    "\n",
+    "In this step, we load the raw behavioral dataset from a .parquet file into a DataFrame. We also standardize gender-related columns (GR_Gender and Gender) by converting all values to lowercase, ensuring consistent formatting for downstream analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "c447bc01-7430-4e50-bac2-6a3c95dca4b6",
    "metadata": {},
    "outputs": [],
@@ -42,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "f8bf19a5-9325-4a09-840c-02dceb46a21e",
    "metadata": {},
    "outputs": [],
@@ -60,92 +67,78 @@
    "id": "b2d5398d-2c59-4682-aed7-30b021c4e8ca",
    "metadata": {},
    "source": [
-    "### ANOVA test"
+    "### Factorial ANOVA – Group × Sex × Year Effects\n",
+    "\n",
+    "To evaluate whether behavioral outcomes differ across experimental groups, sexes, and years, we performed a factorial ANOVA on six key behavioral features. The model includes:\n",
+    "- Main effects: Group, Sex, Year\n",
+    "- Two-way interactions: Group × Year and Sex × Year\n",
+    "  \n",
+    "This analysis identifies which behavioral measures show statistically significant differences across subpopulations or temporal contexts. The results are compiled into a unified ANOVA table (final_anova_df) for further inspection and visualization."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "cc516078-7ba5-463e-bf99-123bfadca31d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# Drop rows where grouping variables are missing\n",
+    "df = df.dropna(subset=['GR_Gender', 'Year'])\n",
+    "# Normalize gender information (lowercase for consistency)\n",
+    "df['Sex'] = df['Gender'].str.lower()\n",
+    "df['Group_Sex'] = df['GR_Gender'].str.lower()\n",
+    "\n",
     "# Define variables to test and corresponding feature names in the dataset\n",
     "anova_targets = {\n",
     "    'LOCO_TOT': 'Locomotion (Loco_TOT)',\n",
     "    'LOCO_BEF': 'Locomotion frequency (LOCO_BEF)',\n",
-    "    'Expl_E_I_TOT_Loco_ratio': 'Exploration (Expl_E_I_TOT_Loco_ratio)',\n",
-    "    'Expl_E_I_BEF_Nr': 'Exploration frequency (Expl_E_I_BEF_Nr)',\n",
+    "    'EXPL_TOT': 'Exploration (Expl_TOT)',\n",
+    "    'Expl_E_I_BEF_Nr': 'Exploration frequency (Expl_BEF)',\n",
     "    'L_C': 'Learning capacity (L_C)',\n",
     "    'E_E': 'Effective exploration ratio (E_E)'\n",
     "}\n",
     "\n",
-    "# Prepare results container\n",
+    "# Initialize a list to collect ANOVA results\n",
     "anova_results = []\n",
     "\n",
-    "# Run factorial ANOVA for each feature\n",
+    "# Perform two-way factorial ANOVA for each target variable\n",
+    "# Including main effects and interactions with Year\n",
     "for feature, description in anova_targets.items():\n",
     "    formula = f\"{feature} ~ C(Group) + C(Sex) + C(Year) + C(Group):C(Year) + C(Sex):C(Year)\"\n",
     "    model = ols(formula, data=df).fit()\n",
     "    anova_table = sm.stats.anova_lm(model, typ=2)\n",
+    "    # Annotate results with feature description and variable name\n",
     "    anova_table[\"Feature\"] = description\n",
     "    anova_table[\"Variable\"] = anova_table.index\n",
-    "    anova_results.append(anova_table.reset_index(drop=True))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "30e6c797-d141-498b-b882-ddbce4e44969",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Concatenate all results\n",
+    "    anova_results.append(anova_table.reset_index(drop=True))\n",
+    "\n",
+    "# Combine results into a single DataFram\n",
     "final_anova_df = pd.concat(anova_results, ignore_index=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "20b87b6f-3edf-4281-92a4-eeb61abe898c",
+   "cell_type": "markdown",
+   "id": "108064ba-ff94-48cb-93a1-af9bac870db9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Make a copy of the original ANOVA result table\n",
-    "df_anova = final_anova_df.copy()\n",
+    "### ANOVA Summary Table (Formatted for Readability)\n",
     "\n",
-    "# Map original variable names to clean labels\n",
-    "label_map = {\n",
-    "    'C(Group)': 'Gr',\n",
-    "    'C(Sex)': 'Sex',\n",
-    "    'C(Year)': 'Year',\n",
-    "    'C(Group):C(Year)': 'Gr/Y',\n",
-    "    'C(Sex):C(Year)': 'Sex/Y'\n",
-    "}\n",
+    "The raw factorial ANOVA results are reformatted into a clean summary table. Only the main effects and relevant two-way interactions are retained:\n",
+    "- Gr: Experimental Group\n",
+    "- Sex: Biological Sex\n",
+    "- Year: Testing Year\n",
+    "- Gr/Y: Group × Year interaction\n",
+    "- Sex/Y: Sex × Year interaction\n",
     "\n",
-    "# Filter to include only the relevant ANOVA terms\n",
-    "df_anova = df_anova[df_anova['Variable'].isin(label_map.keys())]\n",
-    "\n",
-    "# Create a new column for simplified effect labels\n",
-    "df_anova['Effect'] = df_anova['Variable'].map(label_map)\n",
-    "\n",
-    "# Format the F and p-values into a readable string\n",
-    "df_anova['F(p)'] = df_anova.apply(\n",
-    "    lambda row: f\"{row['F']:.2f} (p < {row['PR(>F)']:.4f})\", axis=1\n",
-    ")\n",
-    "\n",
-    "# Pivot the table so each effect is a column and each feature is a row\n",
-    "table_formatted = df_anova.pivot(index='Feature', columns='Effect', values='F(p)')\n",
-    "\n",
-    "# Reorder columns to match desired output\n",
-    "ordered_cols = ['Gr', 'Sex', 'Year', 'Gr/Y', 'Sex/Y']\n",
-    "table_formatted = table_formatted.reindex(columns=ordered_cols)"
+    "Each cell shows the F-statistic along with the associated p-value, helping to quickly identify which variables are significantly influenced by group, sex, year, or their interactions. This format is well-suited for publication or supplementary tables."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "fb38fa39-b1c4-4b6f-a57d-6edd84b23db7",
+   "execution_count": 9,
+   "id": "20b87b6f-3edf-4281-92a4-eeb61abe898c",
    "metadata": {},
    "outputs": [
     {
@@ -194,15 +187,15 @@
        "      <td>3.00 (p &lt; 0.0063)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Exploration (Expl_E_I_TOT_Loco_ratio)</th>\n",
-       "      <td>5.04 (p &lt; 0.0247)</td>\n",
-       "      <td>28.59 (p &lt; 0.0000)</td>\n",
-       "      <td>34.75 (p &lt; 0.0000)</td>\n",
-       "      <td>3.67 (p &lt; 0.0012)</td>\n",
-       "      <td>2.18 (p &lt; 0.0424)</td>\n",
+       "      <th>Exploration (Expl_TOT)</th>\n",
+       "      <td>293.82 (p &lt; 0.0000)</td>\n",
+       "      <td>4.12 (p &lt; 0.0425)</td>\n",
+       "      <td>41.56 (p &lt; 0.0000)</td>\n",
+       "      <td>21.92 (p &lt; 0.0000)</td>\n",
+       "      <td>3.52 (p &lt; 0.0018)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Exploration frequency (Expl_E_I_BEF_Nr)</th>\n",
+       "      <th>Exploration frequency (Expl_BEF)</th>\n",
        "      <td>67.93 (p &lt; 0.0000)</td>\n",
        "      <td>25.22 (p &lt; 0.0000)</td>\n",
        "      <td>34.10 (p &lt; 0.0000)</td>\n",
@@ -238,41 +231,32 @@
        "</div>"
       ],
       "text/plain": [
-       "Effect                                                    Gr  \\\n",
-       "Feature                                                        \n",
-       "Effective exploration ratio (E_E)        102.58 (p < 0.0000)   \n",
-       "Exploration (Expl_E_I_TOT_Loco_ratio)      5.04 (p < 0.0247)   \n",
-       "Exploration frequency (Expl_E_I_BEF_Nr)   67.93 (p < 0.0000)   \n",
-       "Learning capacity (L_C)                  261.45 (p < 0.0000)   \n",
-       "Locomotion (Loco_TOT)                    147.16 (p < 0.0000)   \n",
-       "Locomotion frequency (LOCO_BEF)           37.25 (p < 0.0000)   \n",
+       "Effect                                              Gr                 Sex  \\\n",
+       "Feature                                                                      \n",
+       "Effective exploration ratio (E_E)  102.58 (p < 0.0000)   3.69 (p < 0.0547)   \n",
+       "Exploration (Expl_TOT)             293.82 (p < 0.0000)   4.12 (p < 0.0425)   \n",
+       "Exploration frequency (Expl_BEF)    67.93 (p < 0.0000)  25.22 (p < 0.0000)   \n",
+       "Learning capacity (L_C)            261.45 (p < 0.0000)   2.80 (p < 0.0943)   \n",
+       "Locomotion (Loco_TOT)              147.16 (p < 0.0000)  94.49 (p < 0.0000)   \n",
+       "Locomotion frequency (LOCO_BEF)     37.25 (p < 0.0000)  44.34 (p < 0.0000)   \n",
        "\n",
-       "Effect                                                  Sex  \\\n",
-       "Feature                                                       \n",
-       "Effective exploration ratio (E_E)         3.69 (p < 0.0547)   \n",
-       "Exploration (Expl_E_I_TOT_Loco_ratio)    28.59 (p < 0.0000)   \n",
-       "Exploration frequency (Expl_E_I_BEF_Nr)  25.22 (p < 0.0000)   \n",
-       "Learning capacity (L_C)                   2.80 (p < 0.0943)   \n",
-       "Locomotion (Loco_TOT)                    94.49 (p < 0.0000)   \n",
-       "Locomotion frequency (LOCO_BEF)          44.34 (p < 0.0000)   \n",
+       "Effect                                           Year                Gr/Y  \\\n",
+       "Feature                                                                     \n",
+       "Effective exploration ratio (E_E)  19.32 (p < 0.0000)  12.56 (p < 0.0000)   \n",
+       "Exploration (Expl_TOT)             41.56 (p < 0.0000)  21.92 (p < 0.0000)   \n",
+       "Exploration frequency (Expl_BEF)   34.10 (p < 0.0000)  12.19 (p < 0.0000)   \n",
+       "Learning capacity (L_C)            28.40 (p < 0.0000)  11.74 (p < 0.0000)   \n",
+       "Locomotion (Loco_TOT)              14.02 (p < 0.0000)  12.63 (p < 0.0000)   \n",
+       "Locomotion frequency (LOCO_BEF)    22.36 (p < 0.0000)   2.96 (p < 0.0069)   \n",
        "\n",
-       "Effect                                                 Year  \\\n",
-       "Feature                                                       \n",
-       "Effective exploration ratio (E_E)        19.32 (p < 0.0000)   \n",
-       "Exploration (Expl_E_I_TOT_Loco_ratio)    34.75 (p < 0.0000)   \n",
-       "Exploration frequency (Expl_E_I_BEF_Nr)  34.10 (p < 0.0000)   \n",
-       "Learning capacity (L_C)                  28.40 (p < 0.0000)   \n",
-       "Locomotion (Loco_TOT)                    14.02 (p < 0.0000)   \n",
-       "Locomotion frequency (LOCO_BEF)          22.36 (p < 0.0000)   \n",
-       "\n",
-       "Effect                                                 Gr/Y              Sex/Y  \n",
-       "Feature                                                                         \n",
-       "Effective exploration ratio (E_E)        12.56 (p < 0.0000)  3.00 (p < 0.0063)  \n",
-       "Exploration (Expl_E_I_TOT_Loco_ratio)     3.67 (p < 0.0012)  2.18 (p < 0.0424)  \n",
-       "Exploration frequency (Expl_E_I_BEF_Nr)  12.19 (p < 0.0000)  2.76 (p < 0.0112)  \n",
-       "Learning capacity (L_C)                  11.74 (p < 0.0000)  2.06 (p < 0.0545)  \n",
-       "Locomotion (Loco_TOT)                    12.63 (p < 0.0000)  1.70 (p < 0.1163)  \n",
-       "Locomotion frequency (LOCO_BEF)           2.96 (p < 0.0069)  5.35 (p < 0.0000)  "
+       "Effect                                         Sex/Y  \n",
+       "Feature                                               \n",
+       "Effective exploration ratio (E_E)  3.00 (p < 0.0063)  \n",
+       "Exploration (Expl_TOT)             3.52 (p < 0.0018)  \n",
+       "Exploration frequency (Expl_BEF)   2.76 (p < 0.0112)  \n",
+       "Learning capacity (L_C)            2.06 (p < 0.0545)  \n",
+       "Locomotion (Loco_TOT)              1.70 (p < 0.1163)  \n",
+       "Locomotion frequency (LOCO_BEF)    5.35 (p < 0.0000)  "
       ]
      },
      "metadata": {},
@@ -280,6 +264,35 @@
     }
    ],
    "source": [
+    "# Create a copy of the original ANOVA results to preserve the source\n",
+    "df_anova = final_anova_df.copy()\n",
+    "\n",
+    "# Define a mapping from raw ANOVA variable terms to simplified labels\n",
+    "label_map = {\n",
+    "    'C(Group)': 'Gr',\n",
+    "    'C(Sex)': 'Sex',\n",
+    "    'C(Year)': 'Year',\n",
+    "    'C(Group):C(Year)': 'Gr/Y',\n",
+    "    'C(Sex):C(Year)': 'Sex/Y'\n",
+    "}\n",
+    "\n",
+    "# Filter the DataFrame to retain only the terms of interest\n",
+    "df_anova = df_anova[df_anova['Variable'].isin(label_map.keys())]\n",
+    "\n",
+    "# Create a new column for simplified effect labels\n",
+    "df_anova['Effect'] = df_anova['Variable'].map(label_map)\n",
+    "\n",
+    "# Format the F and p-values into a readable string\n",
+    "df_anova['F(p)'] = df_anova.apply(\n",
+    "    lambda row: f\"{row['F']:.2f} (p < {row['PR(>F)']:.4f})\", axis=1\n",
+    ")\n",
+    "\n",
+    "# Pivot the table so each effect is a column and each feature is a row\n",
+    "table_formatted = df_anova.pivot(index='Feature', columns='Effect', values='F(p)')\n",
+    "\n",
+    "# Reorder columns to match desired output\n",
+    "ordered_cols = ['Gr', 'Sex', 'Year', 'Gr/Y', 'Sex/Y']\n",
+    "table_formatted = table_formatted.reindex(columns=ordered_cols)\n",
     "display(table_formatted)"
    ]
   },
@@ -307,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "8516a471-7965-4117-a76b-45e4deb38edb",
    "metadata": {},
    "outputs": [
@@ -404,22 +417,6 @@
     "anova_table = sm.stats.anova_lm(model, typ=2)\n",
     "display(anova_table)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "367d2e81-73a5-4613-981b-992e52278691",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c215d210-8f0c-4e51-9b2e-8167b8eb7628",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
