--- a/notebooks/anova_playground.ipynb
+++ b/notebooks/anova_playground.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "### Load and Prepare Dataset\n",
     "\n",
-    "In this step, we load the raw behavioral dataset from a .parquet file into a DataFrame. We also standardize gender-related columns (GR_Gender and Gender) by converting all values to lowercase, ensuring consistent formatting for downstream analysis."
+    "In this step, we load the raw behavioral dataset from a .parquet file into a DataFrame. We also standardize Sex-related columns (GR_Sex and Sex) by converting all values to lowercase, ensuring consistent formatting for downstream analysis."
    ]
   },
   {
@@ -42,9 +42,9 @@
     "file_path = \"raw/ambitus_0_15_log_24_07_2025.parquet\"\n",
     "# load the data into a DataFrame\n",
     "df = pd.read_parquet(file_path)\n",
-    "# Standardize gender-related columns by converting text to lowercase\n",
-    "df['GR_Gender'] = df['GR_Gender'].str.lower()\n",
-    "df['Gender'] = df['Gender'].str.lower()"
+    "# Standardize Sex-related columns by converting text to lowercase\n",
+    "df['GR_Sex'] = df['GR_Sex'].str.lower()\n",
+    "df['Sex'] = df['Sex'].str.lower()"
    ]
   },
   {
@@ -55,11 +55,11 @@
    "outputs": [],
    "source": [
     "# Drop rows with missing values in Group_Sex or Year\n",
-    "df = df.dropna(subset=['GR_Gender', 'Year'])\n",
+    "df = df.dropna(subset=['GR_Sex', 'Year'])\n",
     "# Standardize Group_Sex values to lowercase\n",
-    "df['Sex'] = df['Gender'].str.lower()\n",
+    "df['Sex'] = df['Sex'].str.lower()\n",
     "# Standardize Group_Sex values to lowercase\n",
-    "df['Group_Sex'] = df['GR_Gender'].str.lower()"
+    "df['Group_Sex'] = df['GR_Sex'].str.lower()"
    ]
   },
   {
@@ -85,10 +85,10 @@
    "source": [
     "\n",
     "# Drop rows where grouping variables are missing\n",
-    "df = df.dropna(subset=['GR_Gender', 'Year'])\n",
-    "# Normalize gender information (lowercase for consistency)\n",
-    "df['Sex'] = df['Gender'].str.lower()\n",
-    "df['Group_Sex'] = df['GR_Gender'].str.lower()\n",
+    "df = df.dropna(subset=['GR_Sex', 'Year'])\n",
+    "# Normalize Sex information (lowercase for consistency)\n",
+    "df['Sex'] = df['Sex'].str.lower()\n",
+    "df['Group_Sex'] = df['GR_Sex'].str.lower()\n",
     "\n",
     "# Define variables to test and corresponding feature names in the dataset\n",
     "anova_targets = {\n",
@@ -421,7 +421,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python [conda env:base]",
    "language": "python",
    "name": "conda-base-py"
   },
@@ -435,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
