--- a/notebooks/anova_playground.ipynb
+++ b/notebooks/anova_playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "577ae486-1fed-49e3-a908-4bf4074bec6b",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,25 @@
     "# Import statistical tools\n",
     "from statsmodels.formula.api import ols\n",
     "import statsmodels.api as sm\n",
+    "from statsmodels.stats.multitest import multipletests\n",
     "\n",
     "# System and warning configuration\n",
     "import warnings\n",
     "import os\n",
     "warnings.filterwarnings('ignore')  # Suppress all warnings\n",
     "os.environ[\"KMP_DUPLICATE_LIB_OK\"] = \"TRUE\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3870ccd7-19a6-45de-8741-75b438eb4cd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "         'raw_data_path': \"../raw/ambitus_0_15_log_29_07_2025.parquet\",\n",
+    "         'trial_drift':\"../results/trial_drift.csv\"}"
    ]
   },
   {
@@ -39,7 +52,7 @@
    "outputs": [],
    "source": [
     "# Define the path to the raw data file (Parquet format)\n",
-    "file_path = \"../raw/ambitus_0_15_log_29_07_2025.parquet\"\n",
+    "file_path = params['raw_data_path']\n",
     "# load the data into a DataFrame\n",
     "df = pd.read_parquet(file_path)\n",
     "# Standardize Sex-related columns by converting text to lowercase\n",
@@ -588,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "20b87b6f-3edf-4281-92a4-eeb61abe898c",
    "metadata": {},
    "outputs": [
@@ -771,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "8516a471-7965-4117-a76b-45e4deb38edb",
    "metadata": {},
    "outputs": [
@@ -871,86 +884,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "6c957924-ba8a-4afc-85e5-022c11545263",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Either missing values are present in data or data are unbalanced. Please remove them manually or use nan_policy='omit'.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m df_icc \u001b[38;5;241m=\u001b[39m df_icc\u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAnimal\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msubject\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNR\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrial\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEff_Expl_EI\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscore\u001b[39m\u001b[38;5;124m'\u001b[39m})\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# ICC számítás (ICC2, kétirányú, abszolút egyezés, több próbára)\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m icc_result \u001b[38;5;241m=\u001b[39m pg\u001b[38;5;241m.\u001b[39mintraclass_corr(data\u001b[38;5;241m=\u001b[39mdf_icc, targets\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msubject\u001b[39m\u001b[38;5;124m'\u001b[39m, raters\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrial\u001b[39m\u001b[38;5;124m'\u001b[39m, ratings\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscore\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     11\u001b[0m icc_result\n",
-      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\Lib\\site-packages\\pingouin\\reliability.py:276\u001b[0m, in \u001b[0;36mintraclass_corr\u001b[1;34m(data, targets, raters, ratings, nan_policy)\u001b[0m\n\u001b[0;32m    274\u001b[0m         data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mdropna(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, how\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124many\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    275\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 276\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEither missing values are present in data or \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata are unbalanced. Please remove them \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmanually or use nan_policy=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124momit\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m         )\n\u001b[0;32m    282\u001b[0m \u001b[38;5;66;03m# Back to long-format\u001b[39;00m\n\u001b[0;32m    283\u001b[0m \u001b[38;5;66;03m# data_wide = data.copy()  # Optional, for PCA\u001b[39;00m\n\u001b[0;32m    284\u001b[0m data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mreset_index()\u001b[38;5;241m.\u001b[39mmelt(id_vars\u001b[38;5;241m=\u001b[39mtargets, value_name\u001b[38;5;241m=\u001b[39mratings)\n",
-      "\u001b[1;31mValueError\u001b[0m: Either missing values are present in data or data are unbalanced. Please remove them manually or use nan_policy='omit'."
-     ]
-    }
-   ],
-   "source": [
-    "import pingouin as pg\n",
-    "\n",
-    "# Válasszuk ki az ICC számításhoz szükséges oszlopokat\n",
-    "df_icc = df[['Animal', 'NR', 'Eff_Expl_EI']].dropna()\n",
-    "\n",
-    "# Átnevezés az elvárt formátum szerint\n",
-    "df_icc = df_icc.rename(columns={'Animal': 'subject', 'NR': 'trial', 'Eff_Expl_EI': 'score'})\n",
-    "\n",
-    "# ICC számítás (ICC2, kétirányú, abszolút egyezés, több próbára)\n",
-    "icc_result = pg.intraclass_corr(data=df_icc, targets='subject', raters='trial', ratings='score')\n",
-    "icc_result\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "87241008-871b-4458-bd44-8d76dfa03c76",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "Data must have at least 5 non-missing values.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[26], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m df_icc \u001b[38;5;241m=\u001b[39m df_icc\u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAnimal\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msubject\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNR\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrial\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEff_Expl_EI\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscore\u001b[39m\u001b[38;5;124m'\u001b[39m})\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# ICC számítás\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m icc_result \u001b[38;5;241m=\u001b[39m pg\u001b[38;5;241m.\u001b[39mintraclass_corr(data\u001b[38;5;241m=\u001b[39mdf_icc, targets\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msubject\u001b[39m\u001b[38;5;124m'\u001b[39m, raters\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrial\u001b[39m\u001b[38;5;124m'\u001b[39m, ratings\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscore\u001b[39m\u001b[38;5;124m'\u001b[39m, nan_policy\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124momit\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# Csak az ICC2 érték\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(icc_result[icc_result[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mType\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mICC2\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\Lib\\site-packages\\pingouin\\reliability.py:302\u001b[0m, in \u001b[0;36mintraclass_corr\u001b[1;34m(data, targets, raters, ratings, nan_policy)\u001b[0m\n\u001b[0;32m    300\u001b[0m     old_options \u001b[38;5;241m=\u001b[39m options\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m    301\u001b[0m     options[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mround\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m--> 302\u001b[0m     aov \u001b[38;5;241m=\u001b[39m anova(data\u001b[38;5;241m=\u001b[39mdata, dv\u001b[38;5;241m=\u001b[39mratings, between\u001b[38;5;241m=\u001b[39m[targets, raters], ss_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m    303\u001b[0m     options\u001b[38;5;241m.\u001b[39mupdate(old_options)  \u001b[38;5;66;03m# restore options\u001b[39;00m\n\u001b[0;32m    305\u001b[0m \u001b[38;5;66;03m# Extract mean squares\u001b[39;00m\n",
-      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\Lib\\site-packages\\pingouin\\parametric.py:976\u001b[0m, in \u001b[0;36manova\u001b[1;34m(data, dv, between, ss_type, detailed, effsize)\u001b[0m\n\u001b[0;32m    972\u001b[0m     between \u001b[38;5;241m=\u001b[39m between[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m    973\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(between) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[0;32m    974\u001b[0m     \u001b[38;5;66;03m# Two factors with balanced design = Pingouin implementation\u001b[39;00m\n\u001b[0;32m    975\u001b[0m     \u001b[38;5;66;03m# Two factors with unbalanced design = statsmodels\u001b[39;00m\n\u001b[1;32m--> 976\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m anova2(dv\u001b[38;5;241m=\u001b[39mdv, between\u001b[38;5;241m=\u001b[39mbetween, data\u001b[38;5;241m=\u001b[39mdata, ss_type\u001b[38;5;241m=\u001b[39mss_type, effsize\u001b[38;5;241m=\u001b[39meffsize)\n\u001b[0;32m    977\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    978\u001b[0m     \u001b[38;5;66;03m# 3 or more factors with (un)-balanced design = statsmodels\u001b[39;00m\n\u001b[0;32m    979\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m anovan(dv\u001b[38;5;241m=\u001b[39mdv, between\u001b[38;5;241m=\u001b[39mbetween, data\u001b[38;5;241m=\u001b[39mdata, ss_type\u001b[38;5;241m=\u001b[39mss_type, effsize\u001b[38;5;241m=\u001b[39meffsize)\n",
-      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\Lib\\site-packages\\pingouin\\parametric.py:1063\u001b[0m, in \u001b[0;36manova2\u001b[1;34m(data, dv, between, ss_type, effsize)\u001b[0m\n\u001b[0;32m   1061\u001b[0m \u001b[38;5;66;03m# Drop missing values\u001b[39;00m\n\u001b[0;32m   1062\u001b[0m data \u001b[38;5;241m=\u001b[39m data[[dv, fac1, fac2]]\u001b[38;5;241m.\u001b[39mdropna()\n\u001b[1;32m-> 1063\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m data\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mData must have at least 5 non-missing values.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1065\u001b[0m \u001b[38;5;66;03m# Reset index (avoid duplicate axis error)\u001b[39;00m\n\u001b[0;32m   1066\u001b[0m data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mreset_index(drop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mAssertionError\u001b[0m: Data must have at least 5 non-missing values."
-     ]
-    }
-   ],
-   "source": [
-    "# Csak a szükséges oszlopok\n",
-    "df_icc = df[['Animal', 'NR', 'Eff_Expl_EI']].copy()\n",
-    "\n",
-    "# Eldobjuk a NaN értékeket\n",
-    "df_icc = df_icc.dropna()\n",
-    "\n",
-    "# Ellenőrizzük, hogy minden állatnál megvan-e mind a 4 próba\n",
-    "valid_animals = df_icc['Animal'].value_counts()\n",
-    "valid_animals = valid_animals[valid_animals == 4].index  # csak akiknek mind a 4 próbája megvan\n",
-    "\n",
-    "# Szűrés\n",
-    "df_icc = df_icc[df_icc['Animal'].isin(valid_animals)]\n",
-    "\n",
-    "# Átnevezés\n",
-    "df_icc = df_icc.rename(columns={'Animal': 'subject', 'NR': 'trial', 'Eff_Expl_EI': 'score'})\n",
-    "\n",
-    "# ICC számítás\n",
-    "icc_result = pg.intraclass_corr(data=df_icc, targets='subject', raters='trial', ratings='score', nan_policy='omit')\n",
-    "\n",
-    "# Csak az ICC2 érték\n",
-    "print(icc_result[icc_result['Type'] == 'ICC2'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "d6756e8d-adc7-45d0-b7f3-14a1518939c6",
+   "id": "4690d62a-22ef-47e1-8e7b-f30ede44a046",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -958,7 +893,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base]",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
    "name": "conda-base-py"
   },
@@ -972,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
