--- a/notebooks/ml_playground.ipynb
+++ b/notebooks/ml_playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f8187978-43b5-48ca-be26-26fb56ed3ae3",
    "metadata": {},
    "outputs": [],
@@ -465,6 +465,16 @@
     "#Readading the data\n",
     "data = pd.read_csv(params['for_ml'])\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fc93db83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(data.columns).to_csv('ml_columns.csv', index=False)"
    ]
   },
   {
@@ -1171,9 +1181,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base]",
+   "display_name": "ambitus",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1185,7 +1195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
